--- a/Mezl.Result/Mezl.Result.csproj
+++ b/Mezl.Result/Mezl.Result.csproj
@@ -3,8 +3,8 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-    <Version>1.1.0</Version>
+    <Nullable>disable</Nullable>
+    <Version>1.1.1</Version>
     <Authors>Libor Mézl</Authors>
     <RepositoryUrl>https://github.com/libormezl/mezl-result</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
