--- a/Mezl.Result.Handler/Mezl.Result.Handler.csproj
+++ b/Mezl.Result.Handler/Mezl.Result.Handler.csproj
@@ -1,13 +1,26 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
+    <Version>1.1.2</Version>
+    <Authors>Libor Mézl</Authors>
+    <RepositoryUrl>https://github.com/libormezl/mezl-result</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <Description>Simple similar to MediatR to handle with R</Description>
+    <PackageIcon>icon.png</PackageIcon>
+    <PackageReadmeFile>readme.md</PackageReadmeFile>
+    <PackageProjectUrl>https://github.com/libormezl/mezl-result</PackageProjectUrl>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="../Assets/icon.png" Pack="true" PackagePath="\" />
+    <None Include="../readme.md" Pack="true" PackagePath="\" />
   </ItemGroup>
 
   <ItemGroup>
