--- a/Mezl.Result.Handler/Mezl.Result.Handler.csproj
+++ b/Mezl.Result.Handler/Mezl.Result.Handler.csproj
@@ -4,11 +4,11 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>disable</Nullable>
-    <Version>1.1.2</Version>
+    <Version>1.1.3</Version>
     <Authors>Libor Mézl</Authors>
     <RepositoryUrl>https://github.com/libormezl/mezl-result</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
-    <Description>Simple similar to MediatR to handle with R</Description>
+    <Description>Simple, similar to MediatR to handle with R</Description>
     <PackageIcon>icon.png</PackageIcon>
     <PackageReadmeFile>readme.md</PackageReadmeFile>
     <PackageProjectUrl>https://github.com/libormezl/mezl-result</PackageProjectUrl>
