--- a/Mezl.Result.Handler/Mezl.Result.Handler.csproj
+++ b/Mezl.Result.Handler/Mezl.Result.Handler.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>disable</Nullable>
-    <Version>1.1.3</Version>
+    <Version>1.1.4</Version>
     <Authors>Libor Mézl</Authors>
     <RepositoryUrl>https://github.com/libormezl/mezl-result</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
@@ -12,6 +12,7 @@
     <PackageIcon>icon.png</PackageIcon>
     <PackageReadmeFile>readme.md</PackageReadmeFile>
     <PackageProjectUrl>https://github.com/libormezl/mezl-result</PackageProjectUrl>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
