--- a/Mezl.Result.ExampleApp/Mezl.Result.ExampleApp.csproj
+++ b/Mezl.Result.ExampleApp/Mezl.Result.ExampleApp.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Mezl.Result.Extensions\Mezl.Result.Extensions.csproj" />
     <ProjectReference Include="..\Mezl.Result.Handler\Mezl.Result.Handler.csproj" />
   </ItemGroup>
 
